# poetry-mkdocs-shenxzh

./: .gitignore  404.html  README.md  index.html  pyproject.toml
docs/: mkdocs.yml
docs/docs/: intro.md
docs/site/: index.html
intro/: index.html
poetry_mkdocs_shenxzh/: hello.py
search/: search_index.json
tests/: test_poetry_mkdocs_shenxzh.py
